<resources>
    <string name="app_name">New Pet App</string>
    <string name="about">Welcome to Pet Insta, where we celebrate the bond between pets and their owners. Our platform was created by a team of passionate pet lovers who understand the joys and challenges of pet ownership. Join us in celebrating the love and companionship that pets bring to our lives.</string>
    <string name="about_us">About Us</string>
    <string name="add_advice">Add Advice</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_details">Enter Details</string>
    <string name="save">Save</string>
    <string name="add_clinic">Add Clinic</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_clinic_name">Enter Clinic Name</string>
    <string name="enter_contact_no">Enter Contact No</string>
    <string name="add_event">Add Event</string>
    <string name="enter_event_title">Enter Event Title</string>
    <string name="enter_event_location">Enter Event Location</string>
    <string name="enter_more_details">Enter More Details</string>
    <string name="pet_image">Pet Image</string>
    <string name="enter_pet_name">Enter Pet Name</string>
    <string name="pet_type">Pet Type</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_bread">Enter Bread</string>
    <string name="enter_interests">Enter Interests</string>
    <string name="outdoor_activities">Outdoor Activities</string>
    <string name="pet_care_tips">Pet Care Tips</string>
    <string name="add_place">Add Place</string>
    <string name="enter_place_name">Enter Place Name</string>
    <string name="enter_location">Enter Location</string>
    <string name="write_a_review">Write a Review</string>
    <string name="share_your_experience_here">Share your Experience here....</string>
    <string name="add_review">Add Review</string>
    <string name="advice">Advice</string>
    <string name="change_language">Change Language</string>
    <string name="pet_community">Pet Community</string>
    <string name="create_your_profile">Create Your Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="events">Events</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="what_is_the_purpose_of_the_pet_app">What is the purpose of the pet app?</string>
    <string name="the_pet_app_serves_as_a_comprehensive_platform_designed_to_assist_pet_owners_in_various_aspects_of_pet_care_including_finding_pet_friendly_places_accessing_expert_advice_connecting_with_the_pet_community_and_organizing_pet_related_events">The pet app serves as a comprehensive platform designed to assist pet owners in various aspects of pet care, including finding pet-friendly places, accessing expert advice, connecting with the pet community, and organizing pet-related events.</string>
    <string name="lorem_ipsum_site">Lorem ipsum site</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="join_our_community">Join Our Community</string>
    <string name="community_highlights">Community Highlights</string>
    <string name="view_all">View All</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="pet_friendly_places">Pet-Friendly Places</string>
    <string name="pet_clinics">Pet Clinics</string>
    <string name="pet_insta">Pet Insta</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="labrador">Labrador</string>
    <string name="interest">Interest</string>
    <string name="breed">Breed:</string>
    <string name="age">Age:</string>
    <string name="my_pets">My Pets:</string>
    <string name="start">Start</string>
    <string name="english">English</string>
    <string name="community">Community</string>
    <string name="contact_us">Contact Us</string>
    <string name="signout">SignOut</string>
    <string name="grooming_basics">Grooming Basics</string>
    <string name="learn_essential_grooming_techniques_to_keep_your_pet_clean_and_healthy_including_brushing_bathing_and_nail_trimming">Learn essential grooming techniques to keep your pet clean and healthy, including brushing, bathing, and nail trimming</string>
    <string name="how_do_i_create_a_profile_on_the_pet_app">How do I create a profile on the pet app?</string>
    <string name="how_do_i_find_pet_friendly_places_using_the_app">How do I find pet-friendly places using the app?</string>
    <string name="can_i_add_multiple_pets_to_my_profile">Can I add multiple pets to my profile?</string>
    <string name="is_there_a_community_feature_on_the_app">Is there a community feature on the app?</string>
    <string name="you_can_create_profile_by_joining_at_the_start_by_pressing_do_you_have_account_or_by_joining_community">You can create profile by joining at the start by pressing Do you have account? or by joining community.</string>
    <string name="yes_you_can_add_multiple_pets_to_your_profile">Yes You can add multiple pets to your profile.</string>
    <string name="you_can_find_it_by_opening_side_menu_bar_and_select_pet_freindly_plces_option">You can find it by opening side menu bar and select pet-freindly plces option</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language">Language</string>
    <string name="change">Change</string>
</resources>