<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:clickable="true" >

    <RelativeLayout
        android:id="@+id/parent"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <ImageView
            android:id="@+id/close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_close"/>


        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_pet"/>

        <TextView
            android:id="@+id/tvlogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/ivLogo"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pet_insta"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </RelativeLayout>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/parent"
        android:background="@color/white"/>

    <LinearLayout
        android:id="@+id/linear"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/view">


        <TextView
            android:id="@+id/language"
            style="@style/menu"
            android:text="@string/language"
            android:drawableStart="@drawable/language"/>
        <TextView
            android:id="@+id/community"
            style="@style/menu"
            android:text="@string/community"
            android:drawableStart="@drawable/community"/>

        <TextView
            android:id="@+id/places"
            style="@style/menu"
            android:text="@string/pet_friendly_places"
            android:drawableStart="@drawable/places"/>
        <TextView
            android:id="@+id/events"
            style="@style/menu"
            android:text="@string/events"
            android:drawableStart="@drawable/event"/>

        <TextView
            android:id="@+id/advice"
            style="@style/menu"
            android:text="@string/advice"
            android:drawableStart="@drawable/advice"/>
        <TextView
            android:id="@+id/clinics"
            style="@style/menu"
            android:text="@string/pet_clinics"
            android:drawableStart="@drawable/ic_pet_clinic"/>
    </LinearLayout>
    <View
        android:id="@+id/view2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/linear"
        android:background="@color/white"/>
    <LinearLayout
        android:id="@+id/linear2"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/view2">


        <TextView
            android:id="@+id/tvAbout"
            style="@style/menu"
            android:text="@string/about_us"
            android:drawableStart="@drawable/info"/>

        <TextView
            android:id="@+id/faq"
            style="@style/menu"
            android:text="@string/faq_s"
            android:drawableStart="@drawable/faq"/>


    </LinearLayout>

    <TextView
        android:id="@+id/signOut"
        style="@style/menu"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/signout" />

</RelativeLayout>