<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".activities.EditPetsActivity">
    <RelativeLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivBackArrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_arrow"/>

        <TextView
            style="@style/tvHeading"
            android:text="Edit Pets" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/parent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/parent">
        <RelativeLayout
            android:id="@+id/ivAddImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/bg_cam"
            android:elevation="10dp"
            android:padding="10dp"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:src="@drawable/camera_flash" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivAddImage"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/pet_image"
            android:textColor="@color/blue" />

        <EditText
            android:id="@+id/edtName"
            style="@style/edtText3"
            android:layout_below="@id/tvText"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_pet_name"/>

        <EditText
            android:id="@+id/edtType"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_spinner"
            android:layout_below="@id/edtName"
            android:hint="@string/pet_type"
            android:paddingLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/edtAge"
            style="@style/edtText3"
            android:layout_width="150dp"
            android:layout_below="@id/edtName"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/edtType"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_age"/>
        <EditText
            android:id="@+id/edtBreed"
            style="@style/edtText3"
            android:layout_below="@id/edtType"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_bread"/>

        <EditText
            android:id="@+id/edtInterest"
            style="@style/edtText3"
            android:layout_below="@id/edtBreed"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_interests"/>

        <TextView
            android:id="@+id/choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose Interest:"
            android:textColor="@color/black"
            android:layout_below="@id/edtInterest"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="14sp"
            android:layout_margin="10dp"/>
        <CheckBox
            android:id="@+id/activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outdoor_activities"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_below="@id/choose"/>
        <CheckBox
            android:id="@+id/tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_care_tips"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/activity"
            android:layout_below="@id/choose"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            style="@style/Button"
            android:layout_below="@id/activity"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="Save" />
    </RelativeLayout>

</RelativeLayout>