<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivitySplash"
    android:background="@color/blue">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="28sp"
        android:layout_above="@id/ivImage"
        android:textColor="@color/white"
        android:text="@string/pet_insta"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_pet" />

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:text="@string/lorem_ipsum_site"
        android:layout_below="@id/ivImage"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvParagraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHeading"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_light_italic"
        android:textAlignment="center"
        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_above="@+id/btnStart"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/splash_btn_bg"
        android:layout_marginBottom="30dp"
        android:text="@string/start"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:paddingHorizontal="40dp"
        android:fontFamily="@font/poppins_semibold"/>

</RelativeLayout>