<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityCreateProfile"
    android:background="@color/white"
    android:padding="20dp">

    <RelativeLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivBackArrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_arrow" />

        <TextView
            style="@style/tvHeading"
            android:text="@string/create_your_profile"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/parent"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_profile" />

        <EditText
            android:id="@+id/edtName"
            style="@style/edtText2"
            android:layout_below="@id/ivProfile"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/name"/>
        <EditText
            android:id="@+id/edtEmail"
            style="@style/edtText2"
            android:layout_below="@id/edtName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/email"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/edtPass"
            style="@style/edtText2"
            android:layout_below="@id/edtEmail"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password"/>
        <EditText
            android:id="@+id/edtConfPass"
            style="@style/edtText2"
            android:layout_below="@id/edtPass"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/confirm_password"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            style="@style/Button"
            android:layout_below="@id/edtConfPass"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="Save" />

    </RelativeLayout>
</RelativeLayout>