<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityLogin"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/parent1"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_login">
        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_pet"/>
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:text="@string/pet_insta" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/parent1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="20dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@drawable/bg_login2">

        <TextView
            android:id="@+id/tvLogin"
            style="@style/tvLogin"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/login" />

        <EditText
            android:id="@+id/edtEmail"
            style="@style/edtText"
            android:layout_below="@id/tvLogin"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/edtPassword"
            style="@style/edtText"
            android:layout_below="@id/edtEmail"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/password" />

        <RelativeLayout
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@id/edtPassword"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_login_layout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_key" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/tvCreateAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/don_t_have_an_account"
            android:textSize="14sp"
            tools:ignore="HardcodedText" />
    </RelativeLayout>


</RelativeLayout>