<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityAddReview"
    android:background="@color/white"
    >

    <RelativeLayout
        android:id="@+id/parent"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivBackArrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_arrow"/>

        <TextView
            style="@style/tvHeading"
            android:text="@string/write_a_review" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/parent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/parent">

        <RatingBar
            android:id="@+id/rating"
            style="?attr/ratingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:numStars="5"
            android:progressTint="@color/blue"
            android:rating="1"
            android:stepSize="1.0" />

        <View
            android:id="@+id/view"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/rating"
            android:background="@color/blue"/>
        <EditText
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/view"
            android:hint="@string/share_your_experience_here"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_light"
            android:textSize="14sp"
            android:padding="20dp"
            android:gravity="start"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnReview"
            style="@style/Button"
            android:layout_below="@id/detail"
            android:layout_marginTop="30dp"
            android:layout_width="200dp"
            android:layout_centerHorizontal="true"
            android:text="@string/add_review"/>

    </RelativeLayout>
</RelativeLayout>