<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityAddPlaces" android:background="@color/white"
    android:padding="20dp"
    >

    <RelativeLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivBackArrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_arrow"/>

        <TextView
            style="@style/tvHeading"
            android:text="@string/add_place" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/parent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/parent">

        <RelativeLayout
            android:id="@+id/parentRelative"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/bg_spinner"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/ivCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_photo_camera" />



        </RelativeLayout>
        <EditText
            android:id="@+id/edtName"
            style="@style/edtText3"
            android:layout_below="@id/parentRelative"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_place_name"/>

        <EditText
            android:id="@+id/edtlocation"
            style="@style/edtText3"
            android:layout_below="@id/edtName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/enter_location"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            style="@style/Button"
            android:layout_below="@id/edtlocation"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="Save" />

    </RelativeLayout>
</RelativeLayout>